# Tarefa1-F2

./: CMakeLists.txt  README.md  Tarefa1-F2.c
func/: quadrado.c  quadrado.h
